--- a/style.css
+++ b/style.css
@@ -50,6 +50,13 @@ html, body{
   background-color: #f44336;
 }
 
+.header h1,h2{
+	font-family: 'Poiret One', cursive;
+	font-size: 24px;
+	text-align: center;
+	
+}
+
 nav ul {
   text-align: center;
   position: fixed;
@@ -64,7 +71,7 @@ nav ul li {
   display: inline-block;
   margin: 55px;
   margin-bottom: 15px;
-  margin-top: 10px;
+  margin-top: 40px;
 }
 
 nav ul li a {
