--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 
-
-html, body{
-	width: 100%;
-	height: 100%; 
+* {
+  box-sizing: border-box;
+}
+html, body{ 
+	background-color: #ebebe0;
+	background-image: linear-gradient(to left, #ebebe0, white);
+	font-family: 'Poiret One', cursive;
 }
 .welcome {
 	 position: relative;
@@ -50,35 +53,130 @@ html, body{
   background-color: #f44336;
 }
 
+.header {
+	 top: 0;
+  min-height: 15vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
+  padding-top: 5px;
+}
+
 .header h1,h2{
 	font-family: 'Poiret One', cursive;
 	font-size: 24px;
 	text-align: center;
-	
+}
+.header p{
+font-family: 'Poiret One', cursive;
+font-size: 20px;
+text-align: center;
+font-weight: bold;
 }
 
 nav ul {
   text-align: center;
-  position: fixed;
+  background-color: #000033;
   width: 100%;
-  background-color:  white	;
-  border-bottom: solid;
   font-family: 'Poiret One', cursive;
-  font-size: 24px;
-  font-style: bold;
+  font-size: 18px;
+  font-weight: bold;
 }
 nav ul li {
   display: inline-block;
   margin: 55px;
-  margin-bottom: 15px;
-  margin-top: 40px;
+  margin-bottom: 25px;
+  margin-top: 25px;
 }
 
 nav ul li a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 nav ul li a:hover {
-  color: green;
+  color: gray;
+}
 
+.practice{
+	font-family: 'Poiret One', cursive;
+	font-size: 18px;
+	text-align: center;
+	background: 	#80d4ff;
+	color: white;	
+}
+
+.social {
+	text-align: center;
+}
+	/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 36px;
+  width: 15px;
+  text-align: center;
+  border-radius: 50%;
+  text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  color: #3d3d29;
+}
+
+/* Instagram */
+.fa-instagram {
+  color: #3d3d29;
+}
+.fa-github {
+	color: #3d3d29;
+}
+
+.hello{
+	font-size: 24px;
+	text-align: center;
+	padding-bottom: 15px;
+}
+
+.img {
+	width: 250px;
+	height: 250px;
+	position: center;
+padding-bottom: 15px;	
+margin-bottom: 25px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
+
+.row {
+	background-color:  #e0e0d1;
+	font-size: 20px;
+	margin-top: 25px;
+}
+
+.col-1 {width: 15.33%;}
+.col-2 {width: 33%;}
+.col-3 {width: 8.33%;}
+.col-4 {width: 25%;}
+.col-5 {width: 8.33%;}
+.col-6 {width: 25%;}
+
+.row img {
+	width: 60%;
+	height: 60%;
 	
+
